<resources>
    <string name="app_name">Home Made Product</string>
    <string name="activity_login">Login</string>
    <string name="activity_signup">Sign up</string>
    <string name="activity_manager_main">Productive Home</string>
    <string name="activity_manager_product_list">M Product List</string>
    <string name="activity_manager_product">Edit Product</string>
    <string name="activity_customer_main">Customer Home</string>
    <string name="activity_customer_product_list">Product List</string>
    <string name="activity_customer_product">Product</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_fistname">First_name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Confirm Password</string>
    <string name="prompt_city">City</string>
    <string name="prompt_phone">Mobile Phone</string>
    <string name="prompt_usertype">User Type</string>
    <string-array name="user_type_arrays">
        <item>Customer</item>
        <item>Store Manager</item>
    </string-array>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forget_password">Forget password?</string>
    <string name="action_create_account">Create account</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_cart">Cart</string>
    <string name="action_order">Order</string>
    <string name="success_sign_in">Sign in succeeded</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_credential">Username or password is invalid</string>
    <string name="error_invalid_user_type">Type of user is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_must_positive">This field must be positive</string>
    <string name="error_field_invalid_date">This date is invalid</string>
    <string name="error_password2_not_match">Password is mismatch</string>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="error_user_type_required">User Type is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_store_list">Stores</string>
    <string name="title_product_list">Products</string>
    <string name="title_cart_list">My Cart</string>
    <string name="title_order_list">Ordered</string>
    <string name="title_add_store">Add Store</string>
    <string name="title_add_product">Add Product</string>

    <string name="label_name">Name:</string>
    <string name="label_description">Description:</string>
    <string name="label_icon">Icon:</string>

    <string name="title_confirm">Confirm</string>
    <string name="title_name">Name</string>
    <string name="title_description">Description</string>
    <string name="title_icon">Icon</string>
    <string name="title_img1">Image</string>
    <string name="title_price">Price</string>
    <string name="title_date">Date</string>
    <string name="title_quantity">Quantity</string>
    <string name="title_likes">Likes</string>
    <string name="title_cart_quantity">Cart Quantity</string>
    <string name="title_saving">Saving</string>
    <string name="title_uprice">Unit Price</string>

    <string name="message_store_added">Success to add a store</string>
    <string name="message_product_saved">Success to save product information</string>
    <string name="message_add_cart">Success to add cart</string>
    <string name="message_invalid_file">File is invalid</string>
    <string name="message_file_not_found">File not found</string>
    <string name="message_server_error">Server error</string>
    <string name="message_io_error">I/O error</string>
    <string name="message_cart_product">Success to cart current product</string>
    <string name="message_order_cart">Success to order current cart</string>
    <string name="message_error">Error</string>
    <string name="message_confirm_back">Do you want to back?</string>
</resources>
