<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dimen_0"
    android:paddingTop="@dimen/dimen_0"
    android:paddingRight="@dimen/dimen_0"
    android:paddingBottom="@dimen/dimen_0"
    tools:context=".user.SignupActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/signup_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/signup_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dimen_margin7"
        android:layout_marginRight="@dimen/dimen_margin7"
        android:layout_marginTop="@dimen/dimen_margin4"
        android:layout_marginBottom="@dimen/dimen_margin4">

        <LinearLayout
            android:id="@+id/username_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:src="@drawable/ic_account_circle_black_96dp"
                android:visibility="visible" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/dimen_textSize5" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/firstname_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_fistname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/dimen_textSize5" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/lastname_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_lastname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/dimen_textSize5" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/dimen_textSize5" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/dimen_textSize5" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password2_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password2"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/dimen_textSize5" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/city_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_city"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/dimen_textSize5" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_phone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/dimen_textSize5" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/usertype_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_margin2"
                android:entries="@array/user_type_arrays"
                android:prompt="@string/prompt_usertype" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/dimen_margin7"
                android:layout_marginTop="@dimen/dimen_margin6"
                android:layout_marginRight="@dimen/dimen_margin7"
                android:onClick="onSignUpButtonClicked"
                android:padding="@dimen/dimen_margin3"
                android:text="@string/action_sign_in_short"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_textSize5"
                android:textStyle="bold"
                android:theme="@style/PrimaryButton" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>